--- a/src/styles/components/_wrapper.scss
+++ b/src/styles/components/_wrapper.scss
@@ -41,7 +41,8 @@
 
 		@include media(w500) {
 			transform: rotate(-18deg) scaleY(-1);
-			right: 55%;
+			top: -3%;
+			right: 45%;
 			//display: none;
 			z-index: 2;
 		}
