--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,7 +10,7 @@ block content
             div.container.content__container
                 div.content__column
                     img(src="img/pepper.png", alt="").content__column-img-decor.content__column-img-decor_top
-                    div.content__column-head
+                    //div.content__column-head
                         a(href="https://spb.pizzahut.ru/")
                             img(src="img/logo.svg", alt="Pizza Hut").content__column-img
                     div.content__offer
@@ -20,7 +20,7 @@ block content
                             img(src="img/icon-minutes.svg", alt="").content__offer-note-img
                             p.content__offer-note-text.
                                 минут<br> доставка
-                            img(src="img/offer-note-decor.png", alt="").content__offer-note-decor
+                            //img(src="img/offer-note-decor.png", alt="").content__offer-note-decor
                         div.content__offer-price
                             div.content__offer-price-value.content__offer-price-value_old
                                 |998
